--- a/pom.xml
+++ b/pom.xml
@@ -62,11 +62,11 @@
             <version>2.11.0</version>
         </dependency>
 
-        <!--Apache commons-->
+        <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-streams -->
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.6</version>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>2.8.0</version>
         </dependency>
 
         <!--Jackson Databind-->
